# madnet

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-rieszlearning.txt  requirements.txt
data/: bhp-synthetic.parquet  bhp.parquet
madnet/: architectures.py  estimands.py  logging.py  model_selection.py
madnet/datasets/: __init__.py  bhp.py  data_model.py  ihdp.py  load_dataset.py
madnet/estimators/: __init__.py  _base.py  _dragon.py  _estimation_utils.py  _loss_utils.py  _mad.py  _optimization_utils.py  _riesz.py
paper/: benchmark.py  dragonnet.yaml  ipw_plot.parquet  ipw_plot.py  madnet_ade.yaml  madnet_ate.yaml  postprocess.py  reproduction_results.tex  requirements.txt  riesznet_ade.yaml  riesznet_ate.yaml
